--- a/popup.css
+++ b/popup.css
@@ -7,25 +7,22 @@
 .container {
     width: 300px;
     border: solid 2px #000;
-
 }
 
 .header {
     padding: 10px;
     text-align: center;
     background: #0fa958;
-    border-bottom: solid 2px #000;
 }
 
-.function {
-}
 
-#vote-stars {
+#vote-stars, .fb-block {
     padding: 10px 10px;
     background-color: #2896d1;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-top: solid 2px #000;
 }
 
 .btn {
@@ -37,7 +34,7 @@
     cursor: pointer;
 }
 
-.cheat {
+.cheat, .fb-block {
     padding: 10px 10px;
     background-color: #394da3;
     border-top: solid 2px #000;
@@ -76,14 +73,6 @@
     outline: none;
 }
 
-.message {
-    padding: 10px 10px;
-    background-color: #2896d1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-top: solid 2px #000;
-}
 
 .infor {
     padding: 10px 10px;
@@ -103,6 +92,69 @@
     color: #000;
     outline: none;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #0fa958;
+    -webkit-transition: .4s;
+    transition: .4s;
+    
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #f5be40;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #f5be40;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 10px;
+  }
+  
+  .slider.round:before {
+    border-radius: 10px;
+  }
 
 
 
